--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,27 @@ body {
 	background-color: azure;
 }
 
+/*---     Ancre    ---*/
+.retourmenu{
+	position: fixed;
+	right: 0;
+	top: 50%;
+	width: 50px;
+	height: 50px;
+	border-radius: 10px 0 0 10px;
+	background-color: blue;
+	box-shadow: 1px 1px 4px 1px #0fff0;
+}
+.remontemenu--icone{
+	width: 25px;
+	height: 25px;
+	border-bottom: 2px double #fff;
+	border-right: 2px double #fff;
+	border-width: 5px;
+	transform: rotate(-135deg)
+}
+
+
 /*-------------------------*\
 		GLOBAL
 \*-------------------------*/
