--- a/css/style.css
+++ b/css/style.css
@@ -689,7 +689,6 @@ footer {
 	z-index: 1;
 	bottom: 250px;
 	right: -165px;
-
 }
 .reseaux-sociaux a {
 	text-decoration: none;
@@ -739,10 +738,11 @@ footer {
 	margin-top: 10px;
 	z-index: 0;
 	color: #0000ff;
+	padding: 12px;
 }
-.mentions p,
-.mentions a {
-	margin: 10px;
+foot--timer__adw,
+.mentions-pages {
+	width: 200px;
 }
 /*  */
 .footer-nav {
