--- a/css/style.css
+++ b/css/style.css
@@ -551,8 +551,9 @@ main {
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
-	height: 400px;
+	height: 460px;
 	background-color: darkslateblue;
+	box-shadow: inset 1px 1px 6px 1px #fff;
 }
 .centre>section {
 	width: 45%;
@@ -561,7 +562,8 @@ main {
 	box-shadow: 2px 2px 6px 2px #1b1464;
 }
 .centre__section figure {
-	width: 80%;
+	width: 100%;
+	height: 400px;
 }
 /*-------------------------*\
 		CONCLUSION
@@ -570,7 +572,8 @@ main {
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
-	height: 300px;
+	min-height: 300px;
+	margin-bottom: 6px;
 }
 .conclusion__texte {
 	width: 45%;
@@ -591,9 +594,8 @@ main {
 	width: 100%;
 	height: 250px;
 	overflow: hidden;
-	box-shadow: inset 0 0 5px 0 black;
-	background-color: #0ffff0;
-
+	box-shadow: inset 0 0 1px 0 black;
+	padding: 6px;
 }
 .diaporama__container {
 	width: 100%;
