--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
 	--jaune: #ffff00;
 	--fondPrincipal: #662d91;
 	--borderPrincipal: 1px solid #1b1464;
-	--ombrePrincipal: #c2c2c2;
+	--ombrePrincipal: #a1a1a1;
 	--fondCard: #00000;
 	--borderCard: 1px solid #ffff00;
 	--fondBouton: #f7931e;
@@ -164,7 +164,7 @@ figcaption {
 	width: 300px;
 	min-height: 486px;
 	font: var(--h2Font);
-	box-shadow: var(--ombrePrincipal);
+	box-shadow: 1px 1px 4px 1px #1b1464;
 }
 button,
 input[submit] {
@@ -462,6 +462,7 @@ p.text {
 .banniere {
 	width: 100%;
 	height: 650px;
+	margin-bottom: 12px;
 	background-image: url(../images/graphic-parallax-services.png);
 	/*	overflow: hidden;*/
 }
