--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,7 @@ body {
 	top: 50%;
 	width: 40px;
 	height: 40px;
-	background-color: #1b1bc9;
+	background-color: black;
 	box-shadow: 1px 1px 4px 1px #0fff0;
 }
 .remontemenu--icone {
@@ -217,6 +217,7 @@ body {
 .reseaux-sociaux-lateral a{
 	width: 40px;
 	height: 40px;
+	margin-top: 2px;
 }
 .reseaux-sociaux-lateral a img{
 	align-self: center;
