--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,24 @@ input[submit] {
 	width: 100px;
 	height: 25px;
 }
+.flex--column {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+.flex--row {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+.flex--space__around {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
+}
 /*-------------------------*\
 		BODY
 \*-------------------------*/
@@ -238,36 +256,18 @@ body {
 		HEADER
 \*-------------------------*/
 header {
-	position: relative;
+	position:absolute;
 	display: flex;
 	justify-content: space-evenly;
-	width: 100%;
-	height: 200px;
-	/*	background-color: blue;*/
+	width: 80%;
+	top: -50px;
+	z-index: 999;
 }
-.flex--column {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-}
-.flex--row {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-}
-.flex--space__around {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	align-items: center;
-}
+
 .banner__container {
 	position: absolute;
 	width: 100%;
-	padding: 20px;
-	height: 100px;
+	top: 0;
 }
 .banner__container img {
 	width: 100%;
@@ -280,6 +280,7 @@ header {
 	width: 100%;
 	height: 450px;
 	background-color: blue;
+	z-index: 0;
 }
 .nav-deco {
 	position: absolute;
@@ -421,7 +422,7 @@ p.text {
 \*-------------------------*/
 .container__services {
 	position: sticky;
-	height: 250px;
+	min-height: 250px;
 	width: 100%;
 	top: 0px;
 	background-color: transparent;
@@ -430,15 +431,15 @@ p.text {
 .container__services h2 {
 	color: rgba(255, 255, 0, 1);
 	font-weight: 500;
-	width: min-content;
+	height: 50px;
 	width: 500px;
 	background-color: rgba(198, 156, 109, 0.37);
 }
 .container__services .nav-central {
 	width: 50px;
-	height: 500px;
+	height: 300px;
 	margin-top: 3px;
-	box-shadow: 0px 0px 5px 0px yellow;
+/*	box-shadow: 0px 0px 5px 0px yellow;*/
 	align-items: flex-start;
 	background-color: #f7931e;
 }
