--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,7 @@ body {
 	width: 40px;
 	height: 40px;
 	background-color: black;
+	border-radius: 12px 0 0 12px;
 	box-shadow: 1px 1px 4px 1px #0fff0;
 }
 .remontemenu--icone {
@@ -236,6 +237,7 @@ body {
 	width: 40px;
 	height: 40px;
 	margin-top: 2px;
+	border-radius: 0 12px 12px 0;
 }
 .reseaux-sociaux-lateral a img{
 	align-self: center;
@@ -278,7 +280,7 @@ header {
 \*-------------------------*/
 .navigation {
 	width: 100%;
-	height: 450px;
+	height: 300px;
 	background-color: blue;
 	z-index: 0;
 }
@@ -287,7 +289,7 @@ header {
 	display: flex;
 	justify-content: end;
 	width: 80%;
-	min-height: 450px;
+	min-height: 300px;
 	clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
 	/* background-color: bisque; */
 	box-shadow: inset 1px 1px 8px 5px blue;
@@ -297,7 +299,7 @@ header {
 }
 /* Turn off parallax scrolling for tablets and phones. Increase the pixels if needed */
 @media only screen and (max-device-width: 1366px) {
-	.nav-deco {
+	.navigation {
 		background-attachment: scroll;
 	}
 }
@@ -426,10 +428,11 @@ p.text {
 	width: 100%;
 	top: 0px;
 	background-color: transparent;
+/*	background-image: url("../images/services-adw-banner.png");*/
 	z-index: 999;
 }
 .container__services h2 {
-	color: rgba(255, 255, 0, 1);
+	color: #1b1464;
 	font-weight: 500;
 	height: 50px;
 	width: 500px;
