--- a/css/style.css
+++ b/css/style.css
@@ -1041,12 +1041,15 @@ foot--timer__adw,
 	min-height: 900px;
 
 	background-color: azure;
-	border: 2px solid black;
+
 }
-.associers div {
+.associers div:not(.associer__responsabilites) {
 	padding: 12px;
 	box-shadow: 0 0 2px 1px gray;
-	margin: 6px;
+	margin: 12px 0;
+}
+.associer__responsabilites{
+	margin: 12px 0;
 }
 .photo__associers {
 	width: 100%;
@@ -1064,13 +1067,16 @@ foot--timer__adw,
 
 /* travail associé */
 .travail__associer {
-	flex-direction: row;
-	justify-content: space-around;
-	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 30%;
 	box-shadow: 0 0 2px 1px gray;
 }
-.associer__activiter {
-	width: 25%;
+.travail__associer figcaption{
+	align-self: center;
+	text-align: center;
+	width: 100%;
 }
 /*------------------   Fin about   ---------------------*/
 
