--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,7 @@ img {
 	width: 100%;
 	height: auto;
 }
+/*  Important pour les icones nav  */
 figure img {
 	width: 100%;
 }
@@ -1011,16 +1012,15 @@ foot--timer__adw,
 	transform: translate(565.5743px, 75.6716px) rotate(1.355187rad);
 }
 .avatar__cercle {
-	width: 300px;
-	height: 300px;
-	border-radius: 50%;
+	width: 400px;
+	height: auto;
+/*	border-radius: 50%;*/
 	background-color: #fff;
-	margin-bottom: 12px;
+/*	margin-bottom: 12px;*/
 	overflow: hidden;
 }
 .avatar__cercle figure {
 	width: 100%;
-	height: 100%;
 }
 .texte-norm {
 
