--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ h2 {
 	font-stretch: extra-expanded;
 	text-align: center;
 	align-self: center;
-	margin: 10px;
+	margin: 12px;
 }
 h3 {
 	color: #534741;
@@ -169,7 +169,6 @@ figure img {
 }
 figcaption {
 	font: var(--figcaptionFont);
-	margin-top: 6px;
 	background-color: blue;
 	color: beige;
 }
@@ -527,8 +526,9 @@ p.text {
 	background-color: rgba(240, 255, 255, 0.6);
 }
 .presentation--services p {
-	background-color: rgba(240, 255, 255, 0.6);
+/*	background-color: rgba(240, 255, 255, 0.6);*/
 	min-height: 30px;
+	flex: 1;
 }
 .presentation--services h3 {
 	background-color: rgba(240, 255, 255, 0.6);
@@ -540,7 +540,7 @@ p.text {
 	width: 100%;
 	min-height: 250px;
 }
-.presentation-texte01{
+.presentation-illustration{
 	width: 98%;
 	height: 200px;
 	margin: 12px;
@@ -590,13 +590,13 @@ main {
 	width: 100%;
 }
 .art--haut {
-	width: 100%;
+	width: 90%;
 	
 	/*	background-color: cadetblue;*/
 	background-color: navajowhite;
 	box-shadow: 1px 1px 2px 1px #646464;
 	padding: 12px;
-	margin-bottom: 6px;
+	margin: 6px;
 }
 .art--haut figure{
 	flex: 1;
@@ -604,9 +604,8 @@ main {
 .art--haut h3 {
 	width: 100%;
 	height: 50px;
-	background-color: aqua;
 	color: blueviolet;
-	font-size: 2rem;
+	font-size: 1.2rem;
 }
 .art--haut figure {
 	width: 100%;
@@ -676,6 +675,7 @@ main {
 	overflow: hidden;
 	box-shadow: inset 0 0 1px 0 black;
 	padding: 6px;
+	z-index: 99999;
 }
 .diaporama__container {
 	width: 100%;
