--- a/css/styletotal.css
+++ b/css/styletotal.css
@@ -1,32 +1,20 @@
 
 
-section{
-    height: 390px;
-    background-color: bisque;
-    margin: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-.images{
-    width: 550px;
-    height: 350px;
-    background-color: orange;
-    margin: 5px;
-}
-
 /*----------   Gallerie   ---------*/
 	
 .gallery{
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
+	flex-shrink: 1;
 	width: 100%;
 	margin: 0 auto;
 }
 
 .gallery a{
 	display: flex;
+	min-width: 100px;
+	background-color: aqua;
 }
 
 .gallery figure{
