--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ li {
 	content: '"';
 }
 .citation--titre {
-	font-family: 'Luci' Source Sans Pro',da Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	font-family: 'Luci', 'Source Sans Pro','da Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	color: #080808;
 	font-size: 22px;
 }
@@ -268,6 +268,7 @@ body {
 		GLOBAL
 \*-------------------------*/
 .global {
+	position: relative;
 	width: 80%;
 	min-height: 100%;
 }
@@ -277,12 +278,15 @@ body {
 header {
 	position: absolute;
 	display: flex;
-	justify-content: space-evenly;
-	width: 80%;
-	top: -50px;
-	z-index: 9999;
+	justify-content: space-between;
+	width: 100%;
+	top: 0;
 }
 
+header figure{
+	width: 400px;
+	z-index: 9;
+}
 .banner__container {
 	width: 100%;
 	top: 0;
@@ -298,13 +302,13 @@ header {
 	width: 100%;
 	height: 300px;
 	background-color: blue;
-	z-index: 9999;
+	
 }
 .nav-deco {
 	position: absolute;
 	display: flex;
 	justify-content: end;
-	width: 80%;
+	width: 100%;
 	min-height: 300px;
 	clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
 	/* background-color: bisque; */
@@ -326,6 +330,7 @@ header {
 	display: grid;
 	grid-template-columns: 1fr 70%;
 	width: 100%;
+	z-index: 99999;
 }
 .sub-nav__menu {
 	position: sticky;
@@ -719,20 +724,22 @@ footer {
 .info-coord-legal {
 	position: relative;
 	display: flex;
-	flex-direction: column;
-/*	background-color: #5c6654;*/
+	flex-direction: row;
+	background-color: 
 	background-image: url("../realisation/imgIllustratorADW/PaonPlume-02.png");
 	background-repeat: no-repeat;
 	background-size: contain;
 	background-position: right;
+	background-size: 500px auto;
 	width: 100%;
 	min-height: 830px;
 	overflow: hidden;
+	
 }
 .info {
 	display: flex;
 	flex-direction: column;
-	margin: 0 10px;
+	margin-bottom: 12px;
 	width: 300px;
 	min-height: 700px;
 }
@@ -741,7 +748,7 @@ footer {
 	flex-direction: column;
 	width: 100%;
 	min-height: 160px;
-	margin: 3px;
+	margin: 6px;
 }
 .card-info>h3 {
 	background-color: #ab8355;
