--- a/css/style.css
+++ b/css/style.css
@@ -283,9 +283,13 @@ header {
 	top: 0;
 }
 
-header figure{
+header .logo{
 	width: 400px;
 	z-index: 9;
+}
+header .header--deco{
+	width: 300px;
+	z-index: 0;
 }
 .banner__container {
 	width: 100%;
