--- a/css/style.css
+++ b/css/style.css
@@ -286,7 +286,7 @@ header {
 
 header .logo{
 	width: 400px;
-	z-index: 9;
+	z-index: 0;
 }
 header .header--deco{
 	width: 300px;
@@ -335,7 +335,7 @@ header .header--deco{
 	display: grid;
 	grid-template-columns: 1fr 70%;
 	width: 100%;
-	z-index: 99999;
+	z-index: 9;
 }
 .sub-nav__menu {
 	position: sticky;
@@ -351,12 +351,13 @@ header .header--deco{
 	position: relative;
 	text-align: center;
 	width: 16%;
-	min-height: 50px;
+	height: 50px;
 	border: .2px solid orange;
 	vertical-align: middle;
 	text-align: center;
 	column-gap: 7px;
 	margin: 2px;
+	z-index: 999;
 }
 .overlayImg {
 	position: absolute;
@@ -368,6 +369,11 @@ header .header--deco{
 	height: 0;
 	transition: .5s ease;
 }
+.overlayImg img{
+	width: 80%;
+	height: auto;
+	clip-path: border-box;
+}
 figure .nav--image {
 	position: absolute;
 	top: 50%;
@@ -378,6 +384,7 @@ figure .nav--image {
 .container:hover>.overlayImg {
 	bottom: 100%;
 	height: 100px;
+	z-index: 9999;
 }
 .overlayText {
 	margin-bottom: 0;
@@ -386,7 +393,7 @@ figure .nav--image {
 	left: 0;
 	right: 0;
 	text-align: center;
-	background-color: var(--bleu_clair);
+	background-color: #c99d66;
 	overflow: hidden;
 	width: 100%;
 	height: 0;
@@ -396,6 +403,7 @@ figure .nav--image {
 	bottom: 0;
 	min-height: 100px;
 	padding-top: 34px;
+	z-index: 999999;
 }
 .container h3 {
 	display: flex;
@@ -410,13 +418,14 @@ figure .nav--image {
 	position: static;
 }
 p.text {
-	color: orangered;
+	color: #fff;
 	font-size: 20px;
 	position: absolute;
 	text-align: center;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	width: 100%;
+	z-index: 9999;
 }
 /* Fin overlay */
 /*-------------------------*\
