--- a/css/cv.css
+++ b/css/cv.css
@@ -1,54 +1,88 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap");
 
-p{
-    font-family: 'Roboto';
-    color: darkgreen;
-    text-shadow: 0 0 7px rgba(255,255,255,0.3),
-    0 0 3px rgba(255,255,255,0.3);
-    margin-top: 20px;
-}
-
-.moi--meme{
-    text-transform: uppercase;
-    font-size: 1.26rem;
-    height: 450px;
-    color:var(--bleu_foncer);
+p {
+  font-family: "Roboto";
+  color: darkgreen;
+  text-shadow: 0 0 7px rgba(255, 255, 255, 0.3),
+    0 0 3px rgba(255, 255, 255, 0.3);
+  margin-top: 20px;
 }
 
-.animation--metiers{
-    height: 50px;
-    overflow: hidden;
-/*    border: 1px solid black;*/
-}
-.animation--metiers > div:first-child{
-	margin-top:  2.81rem;
-}
-.animation--metiers > div > div{
-    display: inline-block;
-    padding: 0.25rem 0.75rem;
-    height: 2.81rem;
-    width: 400px;
-    text-align: center;
-    
+.moi--meme {
+  text-transform: uppercase;
+  font-size: 1.26rem;
+  height: 450px;
+  color: var(--bleu_foncer);
 }
 
-.animation--metiers div:first-child{
-	top: o;
-    animation: text-animation 8s infinite;
+.animation--metiers {
+  height: 2.81rem;
+  overflow: hidden;
+  /*    border: 1px solid black;*/
+  padding-top: 0rem;
+  background-color: red;
+  position: relative;
+}
+.animation--metiers > div:first-child {
+  margin-top: 2.81rem;
+}
+.animation--metiers > div > div {
+  display: inline-block;
+  padding: auto 0.75rem;
+  height: 2.81rem;
+  width: 400px;
+  text-align: center;
 }
 
-.job-01 div{
-    background-color: #08d67d;
-}
-.job-02 div{
-    background-color: #111fff;
-}
-.job-03 div{
-    background-color: #f69337;
+.animation--metiers div:first-child {
+  top: 0rem;
+  animation: text-animation 8s infinite;
 }
 
+.job-01 div {
+  background-color: #08d67d;
+}
+.job-02 div {
+  background-color: #111fff;
+}
+.job-03 div {
+  background-color: #f69337;
+}
 
-@keyframes text-animation{
+@keyframes text-animation {
+  0% {
+    margin-top: 0rem;
+  }
+  10% {
+    margin-top: 0rem;
+  }
+  20% {
+    margin-top: -5.62rem;
+  }
+  30% {
+    margin-top: -5.62rem;
+  }
+  40% {
+    margin-top: -11.24rem;
+  }
+
+  60% {
+    margin-top: -11.24rem;
+  }
+  70% {
+    margin-top: -5.62rem;
+  }
+  80% {
+    margin-top: -5.62rem;
+  }
+  90% {
+    margin-top: 0rem;
+  }
+  100% {
+    margin-top: 0rem;
+  }
+}
+/* @keyframes text-animation{
     0%{
         margin-top: 0;
     }
@@ -80,104 +114,103 @@ p{
     100%{
         margin-top: 0rem;
     }
-}
-
+} */
 
 /*-------------------------- MAIN --------------------- */
 
-.conteneur--cv{
-    display: flex;
-    flex-direction: row;
-	box-shadow: 2px 1px 1px 1px black;
-	width: 100%;
+.conteneur--cv {
+  display: flex;
+  flex-direction: row;
+  box-shadow: 2px 1px 1px 1px black;
+  width: 100%;
 }
 
-.conteneur--cv section{
-	display: flex;
-    flex-direction: column;
-	margin: 5px;
-	padding: 5px;
+.conteneur--cv section {
+  display: flex;
+  flex-direction: column;
+  margin: 5px;
+  padding: 5px;
 }
 /*  gauche  */
-.col-gauche{
-	width: 30%;
-	background-color: #b3b3b3;
+.col-gauche {
+  width: 30%;
+  background-color: #b3b3b3;
 }
-.avatar{
-    width: 100%;
-    align-self: center;
+.avatar {
+  width: 100%;
+  align-self: center;
 }
-.info-contact{
-    border-bottom: #A48888 solid thin;
+.info-contact {
+  border-bottom: #a48888 solid thin;
 }
-.espace-icone{
-    margin: 15px;
-    height: 20px;
-    width: 20px;
+.espace-icone {
+  margin: 15px;
+  height: 20px;
+  width: 20px;
 }
-.fa-solid{
-    color: aqua; 
+.fa-solid {
+  color: aqua;
 }
 
 /*-----     SKILLLS    -----*/
-.skills, .language{
-    
+.skills,
+.language {
 }
-.contpress, .contlang{
-    border: thin solid aqua;
-    border-radius: 12px;
-    background-color: #F2F8F8;
+.contpress,
+.contlang {
+  border: thin solid aqua;
+  border-radius: 12px;
+  background-color: #f2f8f8;
 }
-.progress, .lang{
-    background-color: aqua;
-    border-radius: 12px 0 0 12px;
-    /* border-bottom-left-radius: 12px;
+.progress,
+.lang {
+  background-color: aqua;
+  border-radius: 12px 0 0 12px;
+  /* border-bottom-left-radius: 12px;
     border-top-left-radius: 12px; */
-    text-align: center;
+  text-align: center;
 }
 
 /*  droite */
-.col-droite{
-    display: flex;
-    flex-direction: column;
-	width: 70%;
+.col-droite {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
 }
-.work-exp, .educ, .centres-interets{
-	
-	height: 50%;
-	width: 100%;
-/*	background-color: #93f2cf;*/
-	border: thin double black;
-	margin: 12px auto;
+.work-exp,
+.educ,
+.centres-interets {
+  height: 50%;
+  width: 100%;
+  /*	background-color: #93f2cf;*/
+  border: thin double black;
+  margin: 12px auto;
 }
-.work-exp h4{
-	
+.work-exp h4 {
 }
-.work-exp div, .educ div{
-	display: grid;
-	grid-template-columns: 20% 1fr;
-	width: 100%;
-	box-shadow: 0.25px 0.25px 1px black;
-	margin: 6px;
-}
-
-.work-exp div div, .educ div div{
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
+.work-exp div,
+.educ div {
+  display: grid;
+  grid-template-columns: 20% 1fr;
+  width: 100%;
+  box-shadow: 0.25px 0.25px 1px black;
+  margin: 6px;
 }
 
-
-
-.wrapper{
-    margin: 10px;
-    padding: 10px;
-    width: 500px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    box-shadow: 5px 6px 3px 25% #ff22cc;
-    background: #fff;
-    
+.work-exp div div,
+.educ div div {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
+.wrapper {
+  margin: 10px;
+  padding: 10px;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  box-shadow: 5px 6px 3px 25% #ff22cc;
+  background: #fff;
+}
