--- a/css/style.css
+++ b/css/style.css
@@ -97,8 +97,15 @@ a {
 	height: auto;
 }
 a img {
-	width: 50px;
+	height: 100%;
 }
+
+figure img {
+	display: block;
+	clip-path: fill-box;
+	width: 100%;
+	height: auto;
+  }
 ul {
 
 }
