--- a/css/cv.css
+++ b/css/cv.css
@@ -35,7 +35,7 @@ p {
 }
 
 /* .animation--metiers div:first-child { */
-.animation--metiers div{
+.animation--metiers div:first-child {
   top: 0rem;
   animation: text-animation 8s infinite;
 }
