--- a/css/cv.css
+++ b/css/cv.css
@@ -55,36 +55,20 @@ p {
 }
 
 @keyframes text-animation {
-  0% {
-    margin-top: 0rem;
+  0%,
+  27% {
+    transform: translate(0);
   }
-  10% {
-    margin-top: 0rem;
+  33.33%,
+  60.33% {
+    transform: translate(100%);
   }
-  20% {
-    margin-top: -5.62rem;
-  }
-  30% {
-    margin-top: -5.62rem;
-  }
-  40% {
-    margin-top: -11.24rem;
-  }
-
-  60% {
-    margin-top: -11.24rem;
-  }
-  70% {
-    margin-top: -5.62rem;
-  }
-  80% {
-    margin-top: -5.62rem;
-  }
-  90% {
-    margin-top: 0rem;
+  66.66%,
+  93.66% {
+    transform: translate(200%);
   }
   100% {
-    margin-top: 0rem;
+    transform: translate(300%);
   }
 }
 /* @keyframes text-animation{
