--- a/css/cv.css
+++ b/css/cv.css
@@ -62,18 +62,18 @@ p {
 @keyframes text-animation {
   0%,
   27% {
-    transform: translate(0);
+    transform: translateY(0);
   }
   33.33%,
   60.33% {
-    transform: translate(100%);
+    transform: translateY(100%);
   }
   66.66%,
   93.66% {
-    transform: translate(200%);
+    transform: translateY(200%);
   }
   100% {
-    transform: translate(300%);
+    transform: translateY(300%);
   }
 }
 /* @keyframes text-animation{
