--- a/css/cv.css
+++ b/css/cv.css
@@ -31,7 +31,8 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: auto 0.75rem;
+  /* padding: auto 0.75rem; */
+  padding: 0;
   height: 100%;
   width: 100%;
 }
